--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
                 <artifactId>hutool-all</artifactId>
                 <version>5.8.9</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>2.0.36</version>
+            </dependency>
 
 
             <dependency>
