--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
                 <artifactId>mybatis-plus-join-boot-starter</artifactId>
                 <version>1.4.5</version>
             </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.48</version>
+            </dependency>
 
         </dependencies>
 
